src/test/resources/SemanticAnalysis/negative/UndefinedClass.ls
class A {
  p("${b : B}") {}
}
